WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173711
REGRESSION(
r218686
): [GTK] Several unit tests are failing after
r218686
in the bots
https://bugs.webkit.org/show_bug.cgi?id=173711
Summary
REGRESSION(r218686): [GTK] Several unit tests are failing after r218686 in th...
Carlos Garcia Campos
Reported
2017-06-22 06:18:37 PDT
TEST: ./Tools/gtk/../../WebKitBuild/Release/bin/TestWebKitAPI/WebKit2Gtk/TestWebExtensions... (pid=5824) (./Tools/gtk/../../WebKitBuild/Release/bin/TestWebKitAPI/WebKit2Gtk/TestWebExtensions:5824): GLib-[1;35mCRITICAL[0m **: g_setenv: assertion 'value != NULL' failed cleaning up pid 5828 FAIL: ./Tools/gtk/../../WebKitBuild/Release/bin/TestWebKitAPI/WebKit2Gtk/TestWebExtensions I can't reproduce it locally, but it's complaining about a g_setenv() and I only added one in
r218686
to recover the XDG_RUNTIME_DIR, because it's required by Wayland to work. So, I guess that env var is not set in the bots.
Attachments
Patch
(1.71 KB, patch)
2017-06-22 06:20 PDT
,
Carlos Garcia Campos
clopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-06-22 06:20:05 PDT
Created
attachment 313612
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-06-22 22:39:05 PDT
Committed
r218736
: <
http://trac.webkit.org/changeset/218736
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug