REGRESSION(r218686): [GTK] Several unit tests are failing after r218686 in the bots https://bugs.webkit.org/show_bug.cgi?id=173711

Reviewed by Carlos Alberto Lopez Perez.

I can't reproduce it locally, but it's complaining about a g_setenv() and I only added one in r218686 to recover
the XDG_RUNTIME_DIR, because it's required by Wayland to work. So, I guess that env var is not set in the bots.

* TestWebKitAPI/glib/WebKitGLib/WebKitTestBus.cpp:
(WebKitTestBus::run): Ensure value is not nullptr before calling g_setenv().

Canonical link: https://commits.webkit.org/190619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218736 268f45cc-cd09-0410-ab3c-d52691b4dbfc