Tools/TestWebKitAPI/glib/WebKitGLib/WebKitTestBus.cpp
@@ -36,8 +36,10 @@ bool WebKitTestBus::run()
     CString runtimeDir = g_getenv("XDG_RUNTIME_DIR");
     g_test_dbus_up(m_bus.get());
     m_address = g_test_dbus_get_bus_address(m_bus.get());
-    g_setenv("DISPLAY", display.data(), FALSE);
-    g_setenv("XDG_RUNTIME_DIR", runtimeDir.data(), FALSE);
+    if (!display.isNull())
+        g_setenv("DISPLAY", display.data(), FALSE);
+    if (!runtimeDir.isNull())
+        g_setenv("XDG_RUNTIME_DIR", runtimeDir.data(), FALSE);
     return !m_address.isNull();
 }
 
